# PhysicsEngine

./: .gitignore  CMakeLists.txt  README.md  unit_test
.github/workflows/: main.yml
docs/: Particle.md  Vector3.md
include/phys/: core.hpp  particle.hpp
src/: core.cpp  main.cpp  particle.cpp
test/: particle_test.hpp  unit_test.cpp  vector_test.hpp
